# TotoBotKey

./: .config.example  .gitignore  README.md  Scripting.md  main2.py  makefile  monScript.py  pyproject.toml  requirements.txt
evdevUtils/: __init__.py  devEvent.py  enums.py
examples/: main.py  myScript.py  recorder.py
src/TotoBotKey/: __codegen.py  __dump_keys.py  __publish.py  keys.py  makefile  pyproject.toml
src/TotoBotKey/evdevUtils/: listener.py
src/TotoBotKey/totoBotKey/: __init__.py  commands.py  runtime.py
src/TotoBotRec/: _build_check.py  makefile  pyproject.toml
src/TotoBotRec/totoBotRec/: __init__.py  recorder.py  replayer.py
src/evdevUtils/: __init__.py  devEvent.py  listener.py
src/totoBotKey/: __init__.py  decorators.py  input.py  inputs.py  parser.py  runtime.py
src/totoBotKeys/: input.py  parser.py
src/ydotoolUtils/: __init__.py  enums.py  keys.py  ydotool.py  ydotoold.py
totoHotKeys/: __init__.py  decorators.py  runtime.py
ydotoolUtils/: keys.py  ydotoold.py
