[build-system]
requires = ['TotoBotKey>=0.0.3', 'setuptools>=75.0']

[tool.setuptools.packages.find]
include = ['totoBotRec']

[project]
name = 'TotoBotRec'
version = '0.0.1'
authors = [{name='Vanane', email='vanane@vanane.net'}]
description = 'Macro recording tool for TotoBotKey'
dependencies = ['TotoBotKey>=0.0.3', 'setuptools>=75.0']

readme = 'README.md'
requires-python = '>=3.12'
classifiers = [
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3',
    'Topic :: Desktop Environment'
]
keywords = ['Automation', 'Wayland', 'Macro']

[project.urls]
Homepage = 'https://github.com/Vanane/TotoBotKey/tree/main/src/TotoBotRec'
issues = 'https://github.com/Vanane/TotoBotKey/issues?q=label%3Atotobotrec'